--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Bolod</title>
+    <title>Gadha</title>
   </head>
   <body>
 <h1>Nirjhor Gadha</h1>
