--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="base">
       <div class="profile">
         <div class="photo"><img
-            src="file:///C:/Users/Sierra104/Pictures/images%20(1).jpg?…60&u=813d7e35cd39dd01064b87bec0321f3cb72bcf5a&v=4" />
+            src="pp.jpg" />
         </div>
         <div class="info">
           <h4 class="name">Sierra104</h4><small class="job">Mahadi Nabin Nirjhor</small>
