--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="box">
           <h4>RESULT CARD</h4>
           <p>A WEBSITE THAT HAS RESULT CARD OF MY VI CLASS</p>
-          <a href="file:///C:/Users/Sierra104/Documents/RESULTCARD.html" target="_blank"><i
+          <a href="RESULTCARD.html" target="_blank"><i
               class="fa fa-circle-o-notch fa-spin"></i></a>
           <h4>HARINARAYANPUR UNION HIGH SCHOOL</h4>
           <p>A WEBSITE THAT HAS TEACHERS LIST OF HARINARAYANPUR UNION HIGH SCHOOL(2021)</p>
