--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
               class="fa fa-circle-o-notch fa-spin"></i></a>
           <h4>HARINARAYANPUR UNION HIGH SCHOOL</h4>
           <p>A WEBSITE THAT HAS TEACHERS LIST OF HARINARAYANPUR UNION HIGH SCHOOL(2021)</p>
-          <a href="file:///C:/Users/Sierra104/Documents/LIST.html" target="_blank"><i class="fa fa-circle-o-notch fa-spin"></i></a>
+          <a href="LIST.html" target="_blank"><i class="fa fa-circle-o-notch fa-spin"></i></a>
           <h4></h4>
           <p></p>
-          <a href="file:///C:/Users/Sierra104/Documents/MATHFORMULAS.html" target="_blank"><i class="fa fa-circle-o-notch fa-spin"></i></a>
+          <a href="MATHFORMULAS.html" target="_blank"><i class="fa fa-circle-o-notch fa-spin"></i></a>
           <h4></h4>
           <p></p>
           <a href="404.html" target="_blank"><i
