--- a/MATHFORMULAS.html
+++ b/MATHFORMULAS.html
@@ -42,7 +42,7 @@ body{background-color:black;}
 <table id="BOX">
 <tr>
   <th>NUMBER</th>
-  <th>AlGEBRA MATH FORMULA</th>
+  <th>AlGEBRA(বীজগণিত) MATH FORMULA</th>
 </tr>
 <tr>
   <td>1</td>
@@ -191,6 +191,7 @@ body{background-color:black;}
 </body>
 <head>
 <style>
+
 #HEADING2{text-align:center;
           color:red;
           text-decoration:underline;}
@@ -222,40 +223,217 @@ body{background-color:black;}
 <table id="BOX2">
   <tr>
    <th>NUMBER</th>
-   <th>RECTANGLE FORMULA IN ENGLISH</th>
-   <th>RECTANGLE FORMULA IN BANGLA</th>
+   <th>RECTANGLE(আয়তক্ষেত্র) FORMULA IN BANGLA</th>
   </tr>
   <tr>
     <td>1</td>
-    <td>Area of rectangle = (length স্থ width) square unit</td>
     <td>আয়তক্ষেত্রের ক্ষেত্রফল = (দৈর্ঘ্য × প্রস্থ) বর্গ একক</td>
   </tr>
   <tr>
     <td>2</td>
-    <td>Rectangle range = 2 (length + width) unit</td>
     <td>আয়তক্ষেত্রের পরিসীমা = 2 (দৈর্ঘ্য+প্রস্থ)একক</td>
   </tr>
   <tr>
     <td>3</td>
-    <td>Rectangle angle = √ (length: + width:) unit</td>
     <td>আয়তক্ষেত্রের কর্ণ = √(দৈর্ঘ্য²+প্রস্থ²)একক</td>
   </tr>
   <tr>
     <td>4</td>
-    <td>Length of rectangle = area ÷ width unit</td>
     <td>আয়তক্ষেত্রের দৈর্ঘ্য= ক্ষেত্রফল÷প্রস্ত একক</td>
   </tr>
   <tr>
     <td>5</td>
-    <td>Width of rectangle = area ÷ Length unit</td>
     <td>আয়তক্ষেত্রের প্রস্ত= ক্ষেত্রফল÷দৈর্ঘ্য একক</td>
   </tr>
 </table>
 </body>
 <head>
-  <style>
-  </style>
+<style>
+
+#HEADING3{text-align:center;
+          color:red;
+          text-decoration:underline;}
+
+#BOX3{border-collapse:collapse;
+     width:100% }
+
+#BOX3 td, #BOX3 th {border: 1px solid #ddd;
+                    padding: 8px;}
+
+#BOX3 tr:nth-child(even){background-color:lime;}
+
+#BOX3 tr:nth-child(odd){background-color:cyan;}
+
+#BOX3 td{color:black}
+
+#BOX3 tr:hover {background-color:red;}
+
+#BOX3 th {padding-top: 20px;
+          padding-bottom: 20px;
+          text-align: left;
+          background-color:blue;
+          color:red;}
+
+</style>
 </head>
 <body>
-  </body>
+  <h1 id="HEADING3">NO.3</h1>
+<table id="BOX3">
+  <tr>
+   <th>NUMBER</th>
+   <th>SQUARE(বর্গক্ষেত্র) FORMULA IN BANGLA</th>
+  </tr>
+  <tr>
+    <td>1</td>
+    <td>বর্গক্ষেত্রের ক্ষেত্রফল = (যে কোন একটি বাহুর দৈর্ঘ্য)² বর্গ একক</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>বর্গক্ষেত্রের পরিসীমা = 4 × এক বাহুর দৈর্ঘ্য একক</td>
+  </tr>
+  <tr>
+    <td>3</td>
+    <td>বর্গক্ষেত্রের কর্ণ=√2 × এক বাহুর দৈর্ঘ্য একক</td>
+  </tr>
+  <tr>
+    <td>4</td>
+    <td>বর্গক্ষেত্রের বাহু=√ক্ষেত্রফল বা পরিসীমা÷4 একক</td>
+  </tr>
+</table>
+</body>
+<head>
+<style>
+
+#HEADING4{text-align:center;
+          color:red;
+          text-decoration:underline;}
+
+#BOX4{border-collapse:collapse;
+     width:100% }
+
+#BOX4 td, #BOX4 th {border: 1px solid #ddd;
+                    padding: 8px;}
+
+#BOX4 tr:nth-child(even){background-color:lime;}
+
+#BOX4 tr:nth-child(odd){background-color:cyan;}
+
+#BOX4 td{color:black}
+
+#BOX4 tr:hover {background-color:red;}
+
+#BOX4 th {padding-top: 20px;
+          padding-bottom: 20px;
+          text-align: left;
+          background-color:blue;
+          color:red;}
+
+</style>
+</head>
+<body>
+  <h1 id="HEADING4">NO.4</h1>
+<table id="BOX4">
+  <tr>
+   <th>NUMBER</th>
+   <th>TRIANGLE(ত্রিভূজ) FORMULA IN BANGLA</th>
+  </tr>
+  <tr>
+    <td>1</td>
+    <td>সমবাহু ত্রিভূজের ক্ষেত্রফল = √¾×(বাহু)²</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>সমবাহু ত্রিভূজের উচ্চতা = √3/2×(বাহু)</td>
+  </tr>
+  <tr>
+    <td>3</td>
+    <td>বিষমবাহু ত্রিভুজের ক্ষেত্রফল = √s(s-a) (s-b) (s-c)
+        এখানে a, b, c ত্রিভুজের তিনটি বাহুর দৈর্ঘ্য, s=অর্ধপরিসীমা
+        ★পরিসীমা 2s=(a+b+c)</td>
+  </tr>
+  <tr>
+    <td>4</td>
+    <td>সাধারণ ত্রিভূজের ক্ষেত্রফল = ½(ভূমি×উচ্চতা) বর্গ একক</td>
+  </tr>
+  <tr>
+    <td>5</td>
+    <td>সমকোণী ত্রিভূজের ক্ষেত্রফল = ½(a×b)
+এখানে ত্রিভুজের সমকোণ সংলগ্ন বাহুদ্বয় a এবং b.</td>
+  </tr>
+  <tr>
+    <td>6</td>
+    <td>সমদ্বিবাহু ত্রিভূজের ক্ষেত্রফল = 2√4b²-a²/4 এখানে, a= ভূমি; b= অপর বাহু।</td>
+  </tr>
+  <tr>
+    <td>7</td>
+    <td>ত্রিভুজের উচ্চতা = 2(ক্ষেত্রফল/ভূমি)</td>
+  </tr>
+  <tr>
+    <td>8</td>
+    <td>সমকোণী ত্রিভুজের অতিভুজ =√ লম্ব²+ভূমি²</td>
+  </tr>
+  <tr>
+    <td>9</td>
+    <td>লম্ব =√অতিভূজ²-ভূমি²</td>
+  </tr>
+  <tr>
+    <td>10</td>
+    <td>ভূমি = √অতিভূজ²-লম্ব²</td>
+  </tr>
+  <tr>
+    <td>11</td>
+    <td>সমদ্বিবাহু ত্রিভুজের উচ্চতা = √b² - a²/4 এখানে a= ভূমি; b= সমান দুই বাহুর দৈর্ঘ্য।</td>
+  </tr>
+  <tr>
+    <td>12</td>
+    <td>এখানে a= ভূমি; b= সমান দুই বাহুর দৈর্ঘ্য।</td>
+  </tr>
+</table>
+</body>
+<head>
+<style>
+
+#HEADING5{text-align:center;
+          color:red;
+          text-decoration:underline;}
+
+#BOX5{border-collapse:collapse;
+     width:100% }
+
+#BOX5 td, #BOX5 th {border: 1px solid #ddd;
+                    padding: 8px;}
+
+#BOX5 tr:nth-child(even){background-color:lime;}
+
+#BOX5 tr:nth-child(odd){background-color:cyan;}
+
+#BOX5 td{color:black}
+
+#BOX5 tr:hover {background-color:red;}
+
+#BOX5 th {padding-top: 20px;
+          padding-bottom: 20px;
+          text-align: left;
+          background-color:blue;
+          color:red;}
+
+</style>
+</head>
+<body>
+  <h1 id="HEADING5">NO.5</h1>
+<table id="BOX5">
+  <tr>
+   <th>NUMBER</th>
+   <th>RHOMBS(রম্বস) FORMULA IN BANGLA</th>
+  </tr>
+  <tr>
+    <td>1</td>
+    <td>রম্বসের ক্ষেত্রফল = ½× (কর্ণদুইটির গুণফল)</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>রম্বসের পরিসীমা = 4× এক বাহুর দৈর্ঘ্য</td>
+  </tr>
+</table>
+</body>
 </html>
