--- a/MATHFORMULAS.html
+++ b/MATHFORMULAS.html
@@ -436,4 +436,49 @@ body{background-color:black;}
   </tr>
 </table>
 </body>
+<head>
+<style>
+
+#HEADING6{text-align:center;
+          color:red;
+          text-decoration:underline;}
+
+#BOX6{border-collapse:collapse;
+     width:100% }
+
+#BOX6 td, #BOX6 th {border: 1px solid #ddd;
+                    padding: 8px;}
+
+#BOX6 tr:nth-child(even){background-color:lime;}
+
+#BOX6 tr:nth-child(odd){background-color:cyan;}
+
+#BOX6 td{color:black}
+
+#BOX6 tr:hover {background-color:red;}
+
+#BOX6 th {padding-top: 20px;
+          padding-bottom: 20px;
+          text-align: left;
+          background-color:blue;
+          color:red;}
+
+</style>
+</head>
+<body>
+  <h1 id="HEADING6">NO.6</h1>
+<table id="BOX6">
+  <tr>
+   <th>NUMBER</th>
+   <th>PARALLEL(সামান্তরিক) FORMULA IN BANGLA</th>
+  </tr>
+  <tr>
+    <td>1</td>
+    <td>সামান্তরিকের ক্ষেত্রফল = ভূমি × উচ্চতা</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>সামান্তরিকের পরিসীমা = 2×(সন্নিহিত বাহুদ্বয়ের সমষ্টি)</td>
+  </tr>
+</table>
 </html>
