--- a/MATHFORMULAS.html
+++ b/MATHFORMULAS.html
@@ -481,4 +481,94 @@ body{background-color:black;}
     <td>সামান্তরিকের পরিসীমা = 2×(সন্নিহিত বাহুদ্বয়ের সমষ্টি)</td>
   </tr>
 </table>
+<body>
+  <head>
+  <style>
+
+  #HEADING7{text-align:center;
+            color:red;
+            text-decoration:underline;}
+
+  #BOX7{border-collapse:collapse;
+       width:100% }
+
+  #BOX7 td, #BOX7 th {border: 1px solid #ddd;
+                      padding: 8px;}
+
+  #BOX7 tr:nth-child(even){background-color:lime;}
+
+  #BOX7 tr:nth-child(odd){background-color:cyan;}
+
+  #BOX7 td{color:black}
+
+  #BOX7 tr:hover {background-color:red;}
+
+  #BOX7 th {padding-top: 20px;
+            padding-bottom: 20px;
+            text-align: left;
+            background-color:blue;
+            color:red;}
+
+  </style>
+  </head>
+  <h1 id="HEADING7">NO.7</h1>
+<table id="BOX7">
+  <tr>
+   <th>NUMBER</th>
+   <th>TRAPEZIUM(ট্রাপিজিয়াম) FORMULA IN BANGLA</th>
+  </tr>
+  <tr>
+    <td>1</td>
+    <td>ট্রাপিজিয়ামের ক্ষেত্রফল =½×(সমান্তরাল বাহু দুইটির যােগফল)×উচ্চতাা</td>
+  </tr>
+</table>
+<head>
+<style>
+
+#HEADING8{text-align:center;
+          color:red;
+          text-decoration:underline;}
+
+#BOX8{border-collapse:collapse;
+     width:100% }
+
+#BOX8 td, #BOX8 th {border: 1px solid #ddd;
+                    padding: 8px;}
+
+#BOX8 tr:nth-child(even){background-color:lime;}
+
+#BOX8 tr:nth-child(odd){background-color:cyan;}
+
+#BOX8 td{color:black}
+
+#BOX8 tr:hover {background-color:red;}
+
+#BOX8 th {padding-top: 20px;
+          padding-bottom: 20px;
+          text-align: left;
+          background-color:blue;
+          color:red;}
+
+</style>
+</head>
+<body>
+  <h1 id="HEADING8">NO.8</h1>
+<table id="BOX8">
+  <tr>
+   <th>NUMBER</th>
+   <th>CUBE(ঘনক) FORMULA IN BANGLA</th>
+  </tr>
+  <tr>
+    <td>1</td>
+    <td>ঘনকের ঘনফল = (যেকোন বাহু)³ ঘন একক</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>ঘনকের সমগ্রতলের ক্ষেত্রফল = 6× বাহু² বর্গ একক</td>
+  </tr>
+  <tr>
+    <td>3</td>
+    <td>ঘনকের কর্ণ = √3×বাহু একক</td>
+  </tr>
+</table>
 </html>
