--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css'>
   <link rel='stylesheet' href='https://s.plurk.com/0e89357f530f0a843c68440a020d4eb5.css'>
   <link rel="stylesheet" href="./style.css">
+  <link rel="shortcut icon" type"x-icon" href="rr.jpg"
 </head>
 
 <body>
