--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
       <div class="follow">
         <h3><i class="fa fa-cog fa-spin"></i> My Projects</h3>
         <div class="box">
-          <h4>RESULT CARD</h4>
-          <p>A WEBSITE THAT HAS RESULT CARD OF MY VI CLASS</p>
-          <a href="RESULTCARD.html" target="_blank"><i
+          <h4>HARINARAYANPUR UNION HIGH SCHOOL</h4>
+          <p>A WEBSITE THAT HAS TEACHERS LIST OF HARINARAYANPUR UNION HIGH SCHOOL(2021)</p>
+          <a href="LIST.html" target="_blank"><i
               class="fa fa-circle-o-notch fa-spin"></i></a>
           <h4>HARINARAYANPUR UNION HIGH SCHOOL</h4>
           <p>A WEBSITE THAT HAS TEACHERS LIST OF HARINARAYANPUR UNION HIGH SCHOOL(2021)</p>
-          <a href="LIST.html" target="_blank"><i class="fa fa-circle-o-notch fa-spin"></i></a>
+          <a href="MATHFORMULAS.html" target="_blank"><i class="fa fa-circle-o-notch fa-spin"></i></a>
           <h4></h4>
           <p></p>
-          <a href="MATHFORMULAS.html" target="_blank"><i class="fa fa-circle-o-notch fa-spin"></i></a>
+          <a href="404.html" target="_blank"><i class="fa fa-circle-o-notch fa-spin"></i></a>
           <h4></h4>
           <p></p>
           <a href="404.html" target="_blank"><i
