status of a project

--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
           <p>A WEBSITE THAT HAS TEACHERS LIST OF HARINARAYANPUR UNION HIGH SCHOOL(2021)</p>
           <a href="LIST.html" target="_blank"><i
               class="fa fa-circle-o-notch fa-spin"></i></a>
-          <h4></h4>
-          <p></p>
+          <h4>ALL MATH FORMULA</h4>
+          <p>A WEBSITE THAT HAS ALL THE MATH FORLMULAS</p>
+          <p id="BEST">(STILL WORKING ON IT)<P>
           <a href="MATHFORMULAS.html" target="_blank"><i class="fa fa-circle-o-notch fa-spin"></i></a>
           <h4></h4>
           <p></p>
