--- a/LIST.html
+++ b/LIST.html
@@ -279,10 +279,11 @@ body{background-color:black}
 #SIGN{text-align:right;
       color:red;
       text-decoration:overline;}
+a{color:red}
 </style>
 </head>
 <body>
-<h3 id="LINK" ><a href="file:///C:/Users/Sierra104/Documents/Sierra104.html">Mahadi Nanin Nirjhor.com</a>
+<h3><a href="https://sierra104.netlify.app/">Mahadi Nanin Nirjhor.com</a>
 <h2 id="SIGN">HEAD TEACHER'S SIGN</h2>
 </body>
 </html>
