--- a/LIST.html
+++ b/LIST.html
@@ -279,7 +279,8 @@ body{background-color:black}
 #SIGN{text-align:right;
       color:red;
       text-decoration:overline;}
-a{color:red}
+a{color:red;
+  hover:color:green}
 </style>
 </head>
 <body>
