--- a/LIST.html
+++ b/LIST.html
@@ -280,7 +280,7 @@ body{background-color:black}
       color:red;
       text-decoration:overline;}
 a{color:red;
-  hover:color:green;}
+  even:color:green;}
 </style>
 </head>
 <body>
