--- a/LIST.html
+++ b/LIST.html
@@ -279,8 +279,9 @@ body{background-color:black}
 #SIGN{text-align:right;
       color:red;
       text-decoration:overline;}
-a{color:red;
-  even:color:green;}
+      
+a{color:red;}
+
 </style>
 </head>
 <body>
