--- a/MATHFORMULAS.html
+++ b/MATHFORMULAS.html
@@ -571,4 +571,465 @@ body{background-color:black;}
     <td>ঘনকের কর্ণ = √3×বাহু একক</td>
   </tr>
 </table>
+<head>
+<style>
+
+#HEADING9{text-align:center;
+          color:red;
+          text-decoration:underline;}
+
+#BOX9{border-collapse:collapse;
+     width:100% }
+
+#BOX9 td, #BOX9 th {border: 1px solid #ddd;
+                    padding: 8px;}
+
+#BOX9 tr:nth-child(even){background-color:lime;}
+
+#BOX9 tr:nth-child(odd){background-color:cyan;}
+
+#BOX9 td{color:black}
+
+#BOX9 tr:hover {background-color:red;}
+
+#BOX9 th {padding-top: 20px;
+          padding-bottom: 20px;
+          text-align: left;
+          background-color:blue;
+          color:red;}
+
+</style>
+</head>
+<body>
+  <h1 id="HEADING9">NO.9</h1>
+<table id="BOX9">
+  <tr>
+   <th>NUMBER</th>
+   <th>RECTANGULAR(আয়তঘনক) FORMULA IN BANGLA</th>
+  </tr>
+  <tr>
+    <td>1</td>
+    <td>আয়তঘনকের ঘনফল = (দৈৰ্ঘা×প্রস্ত×উচ্চতা) ঘন একক</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>আয়তঘনকের সমগ্রতলের ক্ষেত্রফল = 2(ab + bc + ca) বর্গ একক[ যেখানে a = দৈর্ঘ্য b = প্রস্ত c = উচ্চতা ]</td>
+  </tr>
+  <tr>
+    <td>3</td>
+    <td>আয়তঘনকের কর্ণ = √a²+b²+c² একক</td>
+  </tr>
+  <tr>
+    <td>4</td>
+    <td>চারি দেওয়ালের ক্ষেত্রফল = 2(দৈর্ঘ্য + প্রস্থ)×উচ্চতা</td>
+  </tr>
+</table>
+  <head>
+    <style>
+#HEADING10{text-align:center;
+           color:red;
+           text-decoration:underline;}
+
+#BOX10{border-collapse:collapse;
+      width:100% }
+
+#BOX10 td, #BOX10 th {border: 1px solid #ddd;
+                     padding: 8px;}
+
+#BOX10 tr:nth-child(even){background-color:lime;}
+
+#BOX10 tr:nth-child(odd){background-color:cyan;}
+
+#BOX10 td{color:black}
+
+#BOX10 tr:hover {background-color:red;}
+
+#BOX10 th {padding-top: 20px;
+          padding-bottom: 20px;
+          text-align: left;
+          background-color:blue;
+          color:red;}
+
+    </style>
+</head>
+<body>
+<h1 id="HEADING10">NO.10</h1>
+<table id="BOX10">
+  <tr>
+    <th>NUMBER</th>
+    <th>CIRCLE(বৃত্ত) FORMULA IN BANGLA</th>
+  </tr>
+  <tr>
+    <td>1</td>
+    <td>বৃত্তের ক্ষেত্রফল = πr²=22/7r² {এখানে π=ধ্রুবক 22/7, বৃত্তের ব্যাসার্ধ= r}</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>বৃত্তের পরিধি = 2πr</td>
+  </tr>
+  <tr>
+    <td>3</td>
+    <td>গোলকের পৃষ্ঠতলের ক্ষেত্রফল = 4πr² বর্গ একক</td>
+  </tr>
+  <tr>
+    <td>4</td>
+    <td>গোলকের আয়তন = 4πr³÷3 ঘন একক</td>
+  </tr>
+  <tr>
+    <td>5</td>
+    <td>h উচ্চতায় তলচ্চেদে উৎপন্ন বৃত্তের ব্যাসার্ধ = √r²-h² একক</td>
+  </tr>
+  <tr>
+    <td>6</td>
+    <td>বৃত্তচাপের দৈর্ঘ্য s=πrθ/180° ,এখানে θ =কোণ</td>
+  </tr>
+</table>
+<head>
+  <style>
+#HEADING11{text-align:center;
+         color:red;
+         text-decoration:underline;}
+
+#BOX11{border-collapse:collapse;
+    width:100% }
+
+#BOX11 td, #BOX11 th {border: 1px solid #ddd;
+                   padding: 8px;}
+
+#BOX11 tr:nth-child(even){background-color:lime;}
+
+#BOX11 tr:nth-child(odd){background-color:cyan;}
+
+#BOX11 td{color:black}
+
+#BOX11 tr:hover {background-color:red;}
+
+#BOX11 th {padding-top: 20px;
+        padding-bottom: 20px;
+        text-align: left;
+        background-color:blue;
+        color:red;}
+
+  </style>
+</head>
+<body>
+<h1 id="HEADING11">NO.11</h1>
+<table id="BOX11">
+<tr>
+  <th>NUMBER</th>
+  <th>EQUILIBRIUM CYLINDER/ROLLER(সমবৃত্তভূমিক সিলিন্ডার / বেলন) FORMULA IN BANGLA</th>
+</tr>
+<tr>
+  <td>1</td>
+  <td>সমবৃত্তভূমিক সিলিন্ডারের ভূমির ব্যাসার্ধ r এবং উচ্চতা h আর হেলানো তলের উচ্চতা l হলে, সিলিন্ডারের আয়তন = πr²h</td>
+</tr>
+<tr>
+  <td>2</td>
+  <td>সমবৃত্তভূমিক সিলিন্ডারের ভূমির ব্যাসার্ধ r এবং উচ্চতা h আর হেলানো তলের উচ্চতা l হলে, সিলিন্ডারের বক্রতলের ক্ষেত্রফল (সিএসএ) = 2πrh।</td>
+</tr>
+<tr>
+  <td>3</td>
+  <td>সমবৃত্তভূমিক সিলিন্ডারের ভূমির ব্যাসার্ধ r এবং উচ্চতা h আর হেলানো তলের উচ্চতা l হলে, সিলিন্ডারের পৃষ্ঠতলের ক্ষেত্রফল (টিএসএ) = 2πr (h + r)</td>
+</tr>
+</table>
+<head>
+  <style>
+#HEADING12{text-align:center;
+         color:red;
+         text-decoration:underline;}
+
+#BOX12{border-collapse:collapse;
+    width:100% }
+
+#BOX12 td, #BOX12 th {border: 1px solid #ddd;
+                   padding: 8px;}
+
+#BOX12 tr:nth-child(even){background-color:lime;}
+
+#BOX12 tr:nth-child(odd){background-color:cyan;}
+
+#BOX12 td{color:black}
+
+#BOX12 tr:hover {background-color:red;}
+
+#BOX12 th {padding-top: 20px;
+        padding-bottom: 20px;
+        text-align: left;
+        background-color:blue;
+        color:red;}
+
+  </style>
+</head>
+<body>
+<h1 id="HEADING12">NO.12</h1>
+<table id="BOX12">
+<tr>
+  <th>NUMBER</th>
+  <th>EQUILATERAL ANGLES(সমবৃত্তভূমিক কোণক) FORMULA IN BANGLA</th>
+</tr>
+<tr>
+  <td>1</td>
+  <td></td>
+</tr>
+<tr>
+  <td>2</td>
+  <td></td>
+</tr>
+<tr>
+  <td>3</td>
+  <td></td>
+</tr>
+<tr>
+  <td>4</td>
+  <td></td>
+</tr>
+<tr>
+  <td>5</td>
+  <td></td>
+</tr>
+<tr>
+  <td>6</td>
+  <td></td>
+</tr>
+</table>
+<head>
+  <style>
+#HEADING13{text-align:center;
+         color:red;
+         text-decoration:underline;}
+
+#BOX13{border-collapse:collapse;
+    width:100% }
+
+#BOX13 td, #BOX13 th {border: 1px solid #ddd;
+                   padding: 8px;}
+
+#BOX13 tr:nth-child(even){background-color:lime;}
+
+#BOX13 tr:nth-child(odd){background-color:cyan;}
+
+#BOX13 td{color:black}
+
+#BOX13 tr:hover {background-color:red;}
+
+#BOX13 th {padding-top: 20px;
+        padding-bottom: 20px;
+        text-align: left;
+        background-color:blue;
+        color:red;}
+
+  </style>
+</head>
+<body>
+<h1 id="HEADING13">NO.13</h1>
+<table id="BOX13">
+<tr>
+  <th>NUMBER</th>
+  <th></th>
+</tr>
+<tr>
+  <td>1</td>
+  <td></td>
+</tr>
+<tr>
+  <td>2</td>
+  <td></td>
+</tr>
+<tr>
+  <td>3</td>
+  <td></td>
+</tr>
+<tr>
+  <td>4</td>
+  <td></td>
+</tr>
+<tr>
+  <td>5</td>
+  <td></td>
+</tr>
+<tr>
+  <td>6</td>
+  <td></td>
+</tr>
+</table>
+<head>
+  <style>
+#HEADING14{text-align:center;
+         color:red;
+         text-decoration:underline;}
+
+#BOX14{border-collapse:collapse;
+    width:100% }
+
+#BOX14 td, #BOX14 th {border: 1px solid #ddd;
+                   padding: 8px;}
+
+#BOX14 tr:nth-child(even){background-color:lime;}
+
+#BOX14 tr:nth-child(odd){background-color:cyan;}
+
+#BOX14 td{color:black}
+
+#BOX14 tr:hover {background-color:red;}
+
+#BOX14 th {padding-top: 20px;
+        padding-bottom: 20px;
+        text-align: left;
+        background-color:blue;
+        color:red;}
+
+  </style>
+</head>
+<body>
+<h1 id="HEADING14">NO.14</h1>
+<table id="BOX14">
+<tr>
+  <th>NUMBER</th>
+  <th></th>
+</tr>
+<tr>
+  <td>1</td>
+  <td></td>
+</tr>
+<tr>
+  <td>2</td>
+  <td></td>
+</tr>
+<tr>
+  <td>3</td>
+  <td></td>
+</tr>
+<tr>
+  <td>4</td>
+  <td></td>
+</tr>
+<tr>
+  <td>5</td>
+  <td></td>
+</tr>
+<tr>
+  <td>6</td>
+  <td></td>
+</tr>
+</table>
+<head>
+  <style>
+#HEADING15{text-align:center;
+         color:red;
+         text-decoration:underline;}
+
+#BOX15{border-collapse:collapse;
+    width:100% }
+
+#BOX15 td, #BOX15 th {border: 1px solid #ddd;
+                   padding: 8px;}
+
+#BOX15 tr:nth-child(even){background-color:lime;}
+
+#BOX15 tr:nth-child(odd){background-color:cyan;}
+
+#BOX15 td{color:black}
+
+#BOX15 tr:hover {background-color:red;}
+
+#BOX15 th {padding-top: 20px;
+        padding-bottom: 20px;
+        text-align: left;
+        background-color:blue;
+        color:red;}
+
+  </style>
+</head>
+<body>
+<h1 id="HEADING15">NO.15</h1>
+<table id="BOX15">
+<tr>
+  <th>NUMBER</th>
+  <th></th>
+</tr>
+<tr>
+  <td>1</td>
+  <td></td>
+</tr>
+<tr>
+  <td>2</td>
+  <td></td>
+</tr>
+<tr>
+  <td>3</td>
+  <td></td>
+</tr>
+<tr>
+  <td>4</td>
+  <td></td>
+</tr>
+<tr>
+  <td>5</td>
+  <td></td>
+</tr>
+<tr>
+  <td>6</td>
+  <td></td>
+</tr>
+</table>
+<head>
+  <style>
+#HEADING16{text-align:center;
+         color:red;
+         text-decoration:underline;}
+
+#BOX16{border-collapse:collapse;
+    width:100% }
+
+#BOX16 td, #BOX16 th {border: 1px solid #ddd;
+                   padding: 8px;}
+
+#BOX16 tr:nth-child(even){background-color:lime;}
+
+#BOX16 tr:nth-child(odd){background-color:cyan;}
+
+#BOX16 td{color:black}
+
+#BOX16 tr:hover {background-color:red;}
+
+#BOX16 th {padding-top: 20px;
+        padding-bottom: 20px;
+        text-align: left;
+        background-color:blue;
+        color:red;}
+
+  </style>
+</head>
+<body>
+<h1 id="HEADING16">NO.16</h1>
+<table id="BOX16">
+<tr>
+  <th>NUMBER</th>
+  <th></th>
+</tr>
+<tr>
+  <td>1</td>
+  <td></td>
+</tr>
+<tr>
+  <td>2</td>
+  <td></td>
+</tr>
+<tr>
+  <td>3</td>
+  <td></td>
+</tr>
+<tr>
+  <td>4</td>
+  <td></td>
+</tr>
+<tr>
+  <td>5</td>
+  <td></td>
+</tr>
+<tr>
+  <td>6</td>
+  <td></td>
+</tr>
+</table>
 </html>
