--- a/MATHFORMULAS.html
+++ b/MATHFORMULAS.html
@@ -769,27 +769,15 @@ body{background-color:black;}
 </tr>
 <tr>
   <td>1</td>
-  <td></td>
+  <td>সমবৃত্তভূমিক ভূমির ব্যাসার্ধ r এবং উচ্চতা h আর হেলানো তলের উচ্চতা l হলে, কোণকের বক্রতলের ক্ষেত্রফল= πrl বর্গ একক</td>
 </tr>
 <tr>
   <td>2</td>
-  <td></td>
+  <td>সমবৃত্তভূমিক ভূমির ব্যাসার্ধ r এবং উচ্চতা h আর হেলানো তলের উচ্চতা l হলে, কোণকের সমতলের ক্ষেত্রফল= πr(r+l) বর্গ একক</td>
 </tr>
 <tr>
   <td>3</td>
-  <td></td>
-</tr>
-<tr>
-  <td>4</td>
-  <td></td>
-</tr>
-<tr>
-  <td>5</td>
-  <td></td>
-</tr>
-<tr>
-  <td>6</td>
-  <td></td>
+  <td>সমবৃত্তভূমিক ভূমির ব্যাসার্ধ r এবং উচ্চতা h আর হেলানো তলের উচ্চতা l হলে, কোণকের আয়তন= ⅓πr²h ঘন একক</td>
 </tr>
 </table>
 <head>
@@ -825,31 +813,19 @@ body{background-color:black;}
 <table id="BOX13">
 <tr>
   <th>NUMBER</th>
-  <th></th>
+  <th>POLYGON(বহুভুজ) FORMULA IN BANGLA</th>
 </tr>
 <tr>
   <td>1</td>
-  <td></td>
+  <td>বহুভুজের কর্ণের সংখ্যা= n(n-3)/2</td>
 </tr>
 <tr>
   <td>2</td>
-  <td></td>
+  <td>বহুভুজের কোণগুলির সমষ্টি=(2n-4)সমকোণএখানে n=বাহুর সংখ্যা</td>
 </tr>
 <tr>
   <td>3</td>
-  <td></td>
-</tr>
-<tr>
-  <td>4</td>
-  <td></td>
-</tr>
-<tr>
-  <td>5</td>
-  <td></td>
-</tr>
-<tr>
-  <td>6</td>
-  <td></td>
+  <td>চতুর্ভুজের পরিসীমা=চার বাহুর সমষ্টি</td>
 </tr>
 </table>
 <head>
@@ -885,31 +861,79 @@ body{background-color:black;}
 <table id="BOX14">
 <tr>
   <th>NUMBER</th>
-  <th></th>
+  <th>TRIGONOMETRY(ত্রিকোণমিতি) FORMULA IN BANGLA</th>
 </tr>
 <tr>
   <td>1</td>
-  <td></td>
+  <td>sinθ=लম্ব/অতিভূজ</td>
 </tr>
 <tr>
   <td>2</td>
-  <td></td>
+  <td>cosθ=ভূমি/অতিভূজ</td>
 </tr>
 <tr>
   <td>3</td>
-  <td></td>
+  <td>taneθ=लম্ব/ভূমি</td>
 </tr>
 <tr>
   <td>4</td>
-  <td></td>
+  <td>cotθ=ভূমি/লম্ব</td>
 </tr>
 <tr>
   <td>5</td>
-  <td></td>
+  <td>secθ=অতিভূজ/ভূমি</td>
 </tr>
 <tr>
   <td>6</td>
-  <td></td>
+  <td>cosecθ=অতিভূজ/লম্ব</td>
+</tr>
+<tr>
+  <td>7</td>
+  <td>sinθ=1/cosecθ, cosecθ=1/sinθ</td>
+</tr>
+<tr>
+  <td>8</td>
+  <td>cosθ=1/secθ, secθ=1/cosθ</td>
+</tr>
+<tr>
+  <td>9</td>
+  <td>tanθ=1/cotθ, cotθ=1/tanθ</td>
+</tr>
+<tr>
+  <td>10</td>
+  <td>sin²θ + cos²θ= 1</td>
+</tr>
+<tr>
+  <td>11</td>
+  <td>sin²θ = 1 - cos²θ</td>
+</tr>
+<tr>
+  <td>12</td>
+  <td>cos²θ = 1- sin²θ</td>
+</tr>
+<tr>
+  <td>13</td>
+  <td>sec²θ - tan²θ = 1</td>
+</tr>
+<tr>
+  <td>14</td>
+  <td>sec²θ = 1+ tan²θ</td>
+</tr>
+<tr>
+  <td>15</td>
+  <td>tan²θ = sec²θ - 1</td>
+</tr>
+<tr>
+  <td>16</td>
+  <td>cosec²θ - cot²θ = 1</td>
+</tr>
+<tr>
+  <td>17</td>
+  <td>cosec²θ = cot²θ + 1</td>
+</tr>
+<tr>
+  <td>18</td>
+  <td>cot²θ = cosec²θ - 1</td>
 </tr>
 </table>
 <head>
@@ -945,31 +969,19 @@ body{background-color:black;}
 <table id="BOX15">
 <tr>
   <th>NUMBER</th>
-  <th></th>
+  <th>SUBTRACTION(বিয়ােগের) FORMULA IN BANGLA</th>
 </tr>
 <tr>
   <td>1</td>
-  <td></td>
+  <td>বিয়ােজন-বিয়োজ্য =বিয়োগফল।</td>
 </tr>
 <tr>
   <td>2</td>
-  <td></td>
+  <td>বিয়ােজন=বিয়ােগফ + বিয়ােজ্য</td>
 </tr>
 <tr>
   <td>3</td>
-  <td></td>
-</tr>
-<tr>
-  <td>4</td>
-  <td></td>
-</tr>
-<tr>
-  <td>5</td>
-  <td></td>
-</tr>
-<tr>
-  <td>6</td>
-  <td></td>
+  <td>বিয়ােজ্য=বিয়ােজন-বিয়ােগফল</td>
 </tr>
 </table>
 <head>
