--- a/MATHFORMULAS.html
+++ b/MATHFORMULAS.html
@@ -969,7 +969,7 @@ body{background-color:black;}
 <table id="BOX15">
 <tr>
   <th>NUMBER</th>
-  <th>SUBTRACTION(বিয়ােগের) FORMULA IN BANGLA</th>
+  <th>SUBTRACTION(বিয়ােগ) FORMULA IN BANGLA</th>
 </tr>
 <tr>
   <td>1</td>
@@ -1017,31 +1017,251 @@ body{background-color:black;}
 <table id="BOX16">
 <tr>
   <th>NUMBER</th>
-  <th></th>
+  <th>MULTIPLICATION(গুণ) FORMULA IN BANGLA</th>
 </tr>
 <tr>
   <td>1</td>
-  <td></td>
+  <td>গুণফল =গুণ্য × গুণক</td>
 </tr>
 <tr>
   <td>2</td>
-  <td></td>
+  <td>গুণক = গুণফল ÷ গুণ্য</td>
 </tr>
 <tr>
   <td>3</td>
-  <td></td>
+  <td>গুণ্য= গুণফল ÷ গুণক</td>
+</tr>
+</table>
+<head>
+  <style>
+#HEADING17{text-align:center;
+         color:red;
+         text-decoration:underline;}
+
+#BOX17{border-collapse:collapse;
+    width:100% }
+
+#BOX17 td, #BOX17 th {border: 1px solid #ddd;
+                   padding: 8px;}
+
+#BOX17 tr:nth-child(even){background-color:lime;}
+
+#BOX17 tr:nth-child(odd){background-color:cyan;}
+
+#BOX17 td{color:black}
+
+#BOX17 tr:hover {background-color:red;}
+
+#BOX17 th {padding-top: 20px;
+        padding-bottom: 20px;
+        text-align: left;
+        background-color:blue;
+        color:red;}
+
+  </style>
+</head>
+<body>
+<h1 id="HEADING17">NO.17</h1>
+<table id="BOX17">
+<tr>
+  <th>NUMBER</th>
+  <th>DIVISION(ভাগ) FORMULA IN BANGLA</th>
+</tr>
+<tr>
+  <td>1</td>
+  <td>নিঃশেষে বিভাজ্য না হলে ভাজ্য= ভাজক × ভাগফল + ভাগশেষ।</td>
+</tr>
+<tr>
+  <td>2</td>
+  <td>নিঃশেষে বিভাজ্য না হলে ভাজ্য= (ভাজ্য— ভাগশেষ) ÷ ভাগফল।</td>
+</tr>
+<tr>
+  <td>3</td>
+  <td>নিঃশেষে বিভাজ্য না হলে ভাগফল = (ভাজ্য — ভাগশেষ)÷ ভাজক।</td>
 </tr>
 <tr>
   <td>4</td>
-  <td></td>
+  <td>নিঃশেষে বিভাজ্য হলে ভাজক= ভাজ্য÷ ভাগফল।ে</td>
 </tr>
 <tr>
   <td>5</td>
-  <td></td>
+  <td>নিঃশেষে বিভাজ্য হলে ভাগফল = ভাজ্য ÷ ভাজক।</td>
 </tr>
 <tr>
   <td>6</td>
-  <td></td>
+  <td>নিঃশেষে বিভাজ্য হলে ভাজ্য = ভাজক × ভাগফল।</td>
+</tr>
+</table>
+<head>
+  <style>
+#HEADING18{text-align:center;
+         color:red;
+         text-decoration:underline;}
+
+#BOX18{border-collapse:collapse;
+    width:100% }
+
+#BOX18 td, #BOX18 th {border: 1px solid #ddd;
+                   padding: 8px;}
+
+#BOX18 tr:nth-child(even){background-color:lime;}
+
+#BOX18 tr:nth-child(odd){background-color:cyan;}
+
+#BOX18 td{color:black}
+
+#BOX18 tr:hover {background-color:red;}
+
+#BOX18 th {padding-top: 20px;
+        padding-bottom: 20px;
+        text-align: left;
+        background-color:blue;
+        color:red;}
+
+  </style>
+</head>
+<body>
+<h1 id="HEADING18">NO.18</h1>
+<table id="BOX18">
+<tr>
+  <th>NUMBER</th>
+  <th>FRACTIONS L.S.G AND G.S.G.(ভগ্নাংশের ল.সা.গু ও গ.সা.গু) FORMULA IN BANGLA</th>
+</tr>
+<tr>
+  <td>1</td>
+  <td>ভগ্নাংশের গ.সা.গু = লবগুলাের গ.সা.গু / হরগুলাের ল.সা.গু</td>
+</tr>
+<tr>
+  <td>2</td>
+  <td>ভগ্নাংশের ল.সা.গু =লবগুলাের ল.সা.গু /হরগুলার গ.সা.গু</td>
+</tr>
+<tr>
+  <td>3</td>
+  <td>ভগ্নাংশদ্বয়ের গুণফল = ভগ্নাংশদ্বয়ের ল.সা.গু × ভগ্নাংশদ্বয়ের গ.সা.গু.</td>
+</tr>
+</table>
+<head>
+  <style>
+#HEADING19{text-align:center;
+         color:red;
+         text-decoration:underline;}
+
+#BOX19{border-collapse:collapse;
+    width:100% }
+
+#BOX19 td, #BOX19 th {border: 1px solid #ddd;
+                   padding: 8px;}
+
+#BOX19 tr:nth-child(even){background-color:lime;}
+
+#BOX19 tr:nth-child(odd){background-color:cyan;}
+
+#BOX19 td{color:black}
+
+#BOX19 tr:hover {background-color:red;}
+
+#BOX19 th {padding-top: 20px;
+        padding-bottom: 20px;
+        text-align: left;
+        background-color:blue;
+        color:red;}
+
+  </style>
+</head>
+<body>
+<h1 id="HEADING19">NO.19</h1>
+<table id="BOX19">
+<tr>
+  <th>NUMBER</th>
+  <th>AVERAGE(গড়) FORMULA IN BANGLA</th>
+</tr>
+<tr>
+  <td>1</td>
+  <td>গড় = রাশি সমষ্টি /রাশি সংখ্যা</td>
+</tr>
+<tr>
+  <td>2</td>
+  <td>রাশির সমষ্টি = গড় ×রাশির সংখ্যা</td>
+</tr>
+<tr>
+  <td>3</td>
+  <td>রাশির সংখ্যা = রাশির সমষ্টি ÷ গড়</td>
+</tr>
+<tr>
+  <td>4</td>
+  <td>আয়ের গড় = মােট আয়ের পরিমাণ / মােট লােকের সংখ্যা</td>
+</tr>
+<tr>
+  <td>5</td>
+  <td>সংখ্যার গড় = সংখ্যাগুলাের যােগফল /সংখ্যার পরিমান বা সংখ্যা</td>
+</tr>
+<tr>
+  <td>6</td>
+  <td>ক্রমিক ধারার গড় =শেষ পদ +১ম পদ /2</td>
+</tr>
+</table>
+<head>
+  <style>
+#HEADING20{text-align:center;
+         color:red;
+         text-decoration:underline;}
+
+#BOX20{border-collapse:collapse;
+    width:100% }
+
+#BOX20 td, #BOX20 th {border: 1px solid #ddd;
+                   padding: 8px;}
+
+#BOX20 tr:nth-child(even){background-color:lime;}
+
+#BOX20 tr:nth-child(odd){background-color:cyan;}
+
+#BOX20 td{color:black}
+
+#BOX20 tr:hover {background-color:red;}
+
+#BOX20 th {padding-top: 20px;
+        padding-bottom: 20px;
+        text-align: left;
+        background-color:blue;
+        color:red;}
+
+  </style>
+</head>
+<body>
+<h1 id="HEADING20">NO.20</h1>
+<table id="BOX20">
+<tr>
+  <th>NUMBER</th>
+  <th>THE AMOUNT OF INTEREST(সুদকষার পরিমান) FORMULA IN BANGLA</th>
+</tr>
+<tr>
+  <td>1</td>
+  <td>সুদ = (সুদের হার×আসল×সময়) ÷১০০</td>
+</tr>
+<tr>
+  <td>2</td>
+  <td>সময় = (100× সুদ)÷ (আসল×সুদের হার)</td>
+</tr>
+<tr>
+  <td>3</td>
+  <td>সুদের হার = (100×সুদ)÷(আসল×সময়)</td>
+</tr>
+<tr>
+  <td>4</td>
+  <td>আসল = (100×সুদ)÷(সময়×সুদের হার)</td>
+</tr>
+<tr>
+  <td>5</td>
+  <td>আসল = {100×(সুদ-মূল)}÷(100+সুদের হার×সময় )</td>
+</tr>
+<tr>
+  <td>6</td>
+  <td>সুদাসল = আসল + সুদ</td>
+</tr>
+<tr>
+  <td>7</td>
+  <td>সুদাসল = আসল ×(1+ সুদের হার)× সময় |[চক্রবৃদ্ধি সুদের ক্ষেত্রে]।</td>
 </tr>
 </table>
 </html>
